test/files/neg/macro-invalidimpl-h/Impls_1.scala
import scala.reflect.macros.{Context => Ctx}

object Impls {
  def foo[U <: Int](c: Ctx) = ???
}
